resolved fdo#79719 recognize ##-MMM-## as date even if ambiguous

Force ##-MMM-## to be ##-MMM-#### if the first number is a day value.

Note that the previous implementation of
(bDay1 && bDay2 && ((bYear1 && !bYear2) || (!bYear1 && bYear2)))
never matched anyway as the detection of bDay1 and bDay2 were changed to
only yield true if bYear1==false or bYear2==false.

Change-Id: If6bb6d3e1757015552eaa81c1f58d53c0794846e